--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
-        "16": "icons/favicon-16x16.png",
-        "48": "icons/favicon.ico",
-        "128": "icons/favicon.ico"
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
       }
     },
     "content_scripts": [
