--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Simple Extension",
+    "name": "Pro Xy",
     "version": "1.0",
-    "description": "A simple Chrome extension with a user input field.",
+    "description": "A simple Chrome extension to apply proxy.",
     "action": {
       "default_popup": "popup.html",
       "default_icon": {
